@@ -1,5 +1,10 @@
 2009-09-20  Jari Aalto  <jari.aalto@cante.net>
 
+	* tiny/tinyperl.el (tinyperl-install-variables-lookup): Add
+	word 'wait'.
+	(tinyperl-pod2text): Work around bug in Perl library
+	Pod::Text.
+
 	* tiny/tinyprocmail.el: Modernize all macros.
 	Adjust indentation in all defuns.
 
